Save withdrawal addresses until users replace them
